; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_commit_list.c_git_commit_list_insert_by_date.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_commit_list.c_git_commit_list_insert_by_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_6__*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @git_commit_list_insert_by_date(i32* %0, %struct.TYPE_6__** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__**, align 8
  %5 = alloca %struct.TYPE_6__**, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__** %1, %struct.TYPE_6__*** %4, align 8
  %7 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %4, align 8
  store %struct.TYPE_6__** %7, %struct.TYPE_6__*** %5, align 8
  br label %8

8:                                                ; preds = %20, %2
  %9 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  store %struct.TYPE_6__* %10, %struct.TYPE_6__** %6, align 8
  %11 = icmp ne %struct.TYPE_6__* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i64 @git_commit_list_time_cmp(i32 %15, i32* %16)
  %18 = icmp sgt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  br label %23

20:                                               ; preds = %12
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  store %struct.TYPE_6__** %22, %struct.TYPE_6__*** %5, align 8
  br label %8

23:                                               ; preds = %19, %8
  %24 = load i32*, i32** %3, align 8
  %25 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %5, align 8
  %26 = call %struct.TYPE_6__* @git_commit_list_insert(i32* %24, %struct.TYPE_6__** %25)
  ret %struct.TYPE_6__* %26
}

declare dso_local i64 @git_commit_list_time_cmp(i32, i32*) #1

declare dso_local %struct.TYPE_6__* @git_commit_list_insert(i32*, %struct.TYPE_6__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
